--- a/package.json
+++ b/package.json
@@ -70,16 +70,15 @@
     "redux-thunk": "^2.2.0",
     "redux-undo": "1.0.0-beta9-9-6",
     "reselect": "^2.5.4",
-    "tether": "^1.4.0",
+    "tether": "^1.4.7",
     "throttle-debounce": "^1.0.1",
     "tslib": "^1.5.0",
     "vega": "4.0.0",
-    "vega-datasets": "^1.8.0",
+    "vega-datasets": "^2.2.0",
     "vega-expression": "^2.3.1",
     "vega-lite": "2.4.0",
     "vega-typings": "^0.2.15",
-    "vega-tooltip": "^0.4.2",
-    "vega-util": "1.7.0"
+    "vega-tooltip": "^0.4.2"
   },
   "devDependencies": {
     "@types/classnames": "^0.0.32",
@@ -108,7 +107,7 @@
     "autoprefixer": "^6.7.6",
     "case-sensitive-paths-webpack-plugin": "^2.0.0",
     "codecov": "^1.0.1",
-    "cross-env": "^5.0.1",
+    "cross-env": "^7.0.3",
     "css-loader": "^0.26.1",
     "enzyme": "^2.8.2",
     "extract-text-webpack-plugin": "2.1.2",
@@ -137,7 +136,7 @@
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.11.2",
     "webpack-manifest-plugin": "^1.1.0",
-    "webpack-notifier": "^1.5.0"
+    "webpack-notifier": "^1.12.0"
   },
   "jest": {
     "transform": {
