--- a/package.json
+++ b/package.json
@@ -77,8 +77,8 @@
     "vega-datasets": "^2.2.0",
     "vega-expression": "^2.3.1",
     "vega-lite": "2.4.0",
-    "vega-typings": "^0.2.15",
-    "vega-tooltip": "^0.4.2"
+    "vega-tooltip": "^0.4.2",
+    "vega-typings": "^0.2.15"
   },
   "devDependencies": {
     "@types/classnames": "^0.0.32",
@@ -133,9 +133,9 @@
     "typescript": "^2.3.4",
     "url-loader": "^0.5.8",
     "vega-util": "1.7.0",
-    "webpack": "^2.5.1",
-    "webpack-dev-server": "^2.11.2",
-    "webpack-manifest-plugin": "^1.1.0",
+    "webpack": "2.7.0",
+    "webpack-dev-server": "2.11.5",
+    "webpack-manifest-plugin": "1.3.2",
     "webpack-notifier": "^1.12.0"
   },
   "jest": {
