--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "font-awesome": "^4.7.0",
     "font-awesome-sass-loader": "^1.0.3",
     "isomorphic-fetch": "^2.2.1",
-    "moment": "^2.18.1",
+    "moment": "2.29.1",
     "normalize-scss": "^6.0.0",
     "papaparse": "^4.3.5",
     "rc-slider": "^8.2.0",
