--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "deploy": "npm run clean && npm run lint && npm run test && scripts/publish.sh && node scripts/deploy.js"
   },
   "dependencies": {
-    "ajv": "^5.2.2",
+    "ajv": "5.5.2",
     "compassql": "0.20.2",
     "font-awesome": "^4.7.0",
     "font-awesome-sass-loader": "^1.0.3",
