--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "@types/webpack": "^3.0.9",
     "@types/webpack-env": "^1.13.0",
     "autoprefixer": "^6.7.6",
-    "case-sensitive-paths-webpack-plugin": "^2.0.0",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
     "codecov": "^1.0.1",
     "cross-env": "^7.0.3",
     "css-loader": "^0.26.1",
