--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
     "react-hot-loader": "next",
     "sass-loader": "^5.0.1",
     "source-map-loader": "^0.1.6",
-    "style-loader": "^0.13.1",
+    "style-loader": "0.13.2",
     "ts-jest": "20",
     "ts-loader": "^2.3.2",
     "tslint": "^4.5.0",
