--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "moment": "2.29.1",
     "normalize-scss": "^6.0.0",
     "papaparse": "^4.3.5",
-    "rc-slider": "^8.2.0",
+    "rc-slider": "8.7.1",
     "re-reselect": "0.6.2",
     "react": "^15.4.2",
     "react-copy-to-clipboard": "^5.0.0",
