--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "file-loader": "^0.10.1",
     "fs-extra": "^3.0.1",
     "gh-pages": "^1.0.0",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "2.30.1",
     "jest": "20",
     "node-sass": "^5.0.0",
     "postcss-loader": "^1.3.3",
