--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "css-loader": "^0.26.1",
     "enzyme": "^2.8.2",
     "extract-text-webpack-plugin": "2.1.2",
-    "fetch-mock": "^5.11.0",
+    "fetch-mock": "5.13.1",
     "file-loader": "^0.10.1",
     "fs-extra": "^3.0.1",
     "gh-pages": "^1.0.0",
