--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "codecov": "^1.0.1",
     "cross-env": "^7.0.3",
     "css-loader": "^0.26.1",
-    "enzyme": "^2.8.2",
+    "enzyme": "2.9.1",
     "extract-text-webpack-plugin": "2.1.2",
     "fetch-mock": "5.13.1",
     "file-loader": "^0.10.1",
