--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "codecov": "^1.0.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^0.26.1",
+    "css-loader": "0.26.4",
     "enzyme": "2.9.1",
     "extract-text-webpack-plugin": "2.1.2",
     "fetch-mock": "5.13.1",
