--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "@types/d3-selection": "1.4.3",
     "@types/enzyme": "^2.8.0",
     "@types/es6-promise": "^0.0.32",
-    "@types/fetch-mock": "^5.8.2",
+    "@types/fetch-mock": "5.12.2",
     "@types/isomorphic-fetch": "^0.0.34",
     "@types/jest": "^18.1.1",
     "@types/json-stable-stringify": "^1.0.31",
