--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "@types/enzyme": "^2.8.0",
     "@types/es6-promise": "^0.0.32",
     "@types/fetch-mock": "5.12.2",
-    "@types/isomorphic-fetch": "^0.0.34",
+    "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^18.1.1",
     "@types/json-stable-stringify": "^1.0.31",
     "@types/node": "^8.0.22",
