--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "@types/react": "^15.0.8",
     "@types/react-css-modules": "^3.7.6",
     "@types/react-dnd": "^2.0.32",
-    "@types/react-dnd-html5-backend": "^2.1.7",
+    "@types/react-dnd-html5-backend": "2.1.9",
     "@types/react-dom": "^0.14.23",
     "@types/react-hot-loader": "^3.0.3",
     "@types/react-redux": "^4.4.36",
