--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "@types/redux-logger": "^3.0.0",
     "@types/throttle-debounce": "1.1.1",
     "@types/webpack": "3.8.20",
-    "@types/webpack-env": "^1.13.0",
+    "@types/webpack-env": "1.16.0",
     "autoprefixer": "^6.7.6",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "codecov": "^1.0.1",
