--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react-copy-to-clipboard": "5.0.3",
     "react-css-modules": "4.7.11",
     "react-datetime": "2.16.3",
-    "react-dnd": "^2.2.3",
+    "react-dnd": "2.6.0",
     "react-dnd-html5-backend": "^2.2.3",
     "react-dom": "^15.4.2",
     "react-file-download": "^0.3.5",
