--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "react-datetime": "2.16.3",
     "react-dnd": "2.6.0",
     "react-dnd-html5-backend": "2.6.0",
-    "react-dom": "^15.4.2",
+    "react-dom": "15.7.0",
     "react-file-download": "^0.3.5",
     "react-jsonschema-form": "^0.49.0",
     "react-modal": "^2.0.6",
