--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "react-file-download": "^0.3.5",
     "react-jsonschema-form": "^0.49.0",
     "react-modal": "2.4.1",
-    "react-redux": "^5.0.2",
+    "react-redux": "5.1.2",
     "react-spinners": "^0.0.30",
     "react-split-pane": "^0.1.58",
     "react-tabs": "^1.1.0",
