--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "react-split-pane": "^0.1.58",
     "react-tabs": "^1.1.0",
     "react-tabs-redux": "^2.0.1",
-    "react-tether": "^0.5.6",
+    "react-tether": "0.5.7",
     "redux": "^3.6.0",
     "redux-action-log": "^2.0.1",
     "redux-logger": "^3.0.6",
