--- a/package.json
+++ b/package.json
@@ -127,7 +127,7 @@
     "source-map-loader": "^0.1.6",
     "style-loader": "0.13.2",
     "ts-jest": "20.0.14",
-    "ts-loader": "^2.3.2",
+    "ts-loader": "2.3.7",
     "tslint": "^4.5.0",
     "tslint-config-standard": "^4.0.0",
     "tslint-react": "^2.3.0",
