--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
     "ts-loader": "2.3.7",
     "tslint": "^4.5.0",
     "tslint-config-standard": "^4.0.0",
-    "tslint-react": "^2.3.0",
+    "tslint-react": "2.6.0",
     "typescript": "^2.3.4",
     "url-loader": "0.5.9",
     "vega-util": "1.7.0",
