--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "react-tabs": "^1.1.0",
     "react-tabs-redux": "^2.0.1",
     "react-tether": "0.5.7",
-    "redux": "^3.6.0",
+    "redux": "3.7.2",
     "redux-action-log": "^2.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
