--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "react-addons-test-utils": "15.6.2",
     "react-dev-utils": "^0.5.2",
     "react-hot-loader": "next",
-    "sass-loader": "^5.0.1",
+    "sass-loader": "6.0.0",
     "source-map-loader": "^0.1.6",
     "style-loader": "0.13.2",
     "ts-jest": "20.0.14",
