Upgrade uglifyjs-webpack-plugin@0.4.6 -> 1.0.0
webpack@4.0.0 dependency

NOTE:
Since previous commit, "(node:27836) DeprecationWarning: Chunk.modules is deprecated. Use Chunk.getNumberOfModules/mapModules/forEachModule/containsModule instead." message appeared when building.

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "tether": "^1.4.7",
     "throttle-debounce": "^1.0.1",
     "tslib": "1.14.1",
+    "uglifyjs-webpack-plugin": "1.0.0",
     "vega": "4.0.0",
     "vega-datasets": "^2.2.0",
     "vega-expression": "^2.3.1",
