--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "react-tabs": "^1.1.0",
     "react-tabs-redux": "^2.0.1",
     "react-tether": "^0.5.6",
-    "redux": "^3.6.0",
+    "redux": "3.7.2",
     "redux-action-log": "^2.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
@@ -72,14 +72,14 @@
     "reselect": "^2.5.4",
     "tether": "^1.4.7",
     "throttle-debounce": "^1.0.1",
-    "tslib": "^1.5.0",
+    "tslib": "1.14.1",
     "vega": "4.0.0",
     "vega-datasets": "^2.2.0",
     "vega-expression": "^2.3.1",
     "vega-lite": "2.4.0",
     "vega-tooltip": "^0.4.2",
     "vega-typings": "^0.2.15",
-    "webpack-notifier": "1.12.0"
+    "webpack-notifier": "1.13.0"
   },
   "devDependencies": {
     "@types/classnames": "^0.0.32",
@@ -126,11 +126,11 @@
     "sass-loader": "^5.0.1",
     "source-map-loader": "^0.1.6",
     "style-loader": "0.13.2",
-    "ts-jest": "20",
-    "ts-loader": "^2.3.2",
+    "ts-jest": "20.0.14",
+    "ts-loader": "2.3.7",
     "tslint": "^4.5.0",
     "tslint-config-standard": "^4.0.0",
-    "tslint-react": "^2.3.0",
+    "tslint-react": "2.6.0",
     "typescript": "^2.3.4",
     "url-loader": "0.5.9",
     "vega-util": "1.7.0",
