--- a/package.json
+++ b/package.json
@@ -58,12 +58,12 @@
     "react-file-download": "^0.3.5",
     "react-jsonschema-form": "^0.49.0",
     "react-modal": "^2.0.6",
-    "react-redux": "^5.0.2",
+    "react-redux": "5.1.2",
     "react-spinners": "^0.0.30",
     "react-split-pane": "^0.1.58",
     "react-tabs": "^1.1.0",
     "react-tabs-redux": "^2.0.1",
-    "react-tether": "^0.5.6",
+    "react-tether": "0.5.7",
     "redux": "3.7.2",
     "redux-action-log": "^2.0.1",
     "redux-logger": "^3.0.6",
