--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "react-addons-test-utils": "15.6.2",
     "react-dev-utils": "^0.5.2",
     "react-hot-loader": "next",
-    "sass-loader": "^5.0.1",
+    "sass-loader": "7.0.0",
     "source-map-loader": "^0.1.6",
     "style-loader": "0.13.2",
     "ts-jest": "20.0.14",
@@ -134,7 +134,7 @@
     "typescript": "^2.3.4",
     "url-loader": "0.5.9",
     "vega-util": "1.7.0",
-    "webpack": "2.7.0",
+    "webpack": "3.0.0",
     "webpack-dev-server": "2.11.5",
     "webpack-manifest-plugin": "1.3.2",
     "webpack-notifier": "^1.12.0"
