--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "@types/d3-selection": "^2.0.0",
     "@types/enzyme": "^2.8.0",
     "@types/es6-promise": "^0.0.32",
-    "@types/fetch-mock": "5.12.2",
+    "@types/fetch-mock": "^7.3.3",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^18.1.1",
     "@types/json-stable-stringify": "^1.0.32",
