--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "codecov": "^3.8.1",
     "cross-env": "^7.0.3",
     "css-loader": "0.26.4",
-    "enzyme": "2.9.1",
+    "enzyme": "^3.11.0",
     "extract-text-webpack-plugin": "2.1.2",
     "fetch-mock": "5.13.1",
     "file-loader": "^0.10.1",
